--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
-# Name of website
-title: Victor Bae's page
+# Victor's Lair
+title: 
 
 # Short description of your site
 description: This is where I will be uploading my projects
